# BackEnd/docs/swagger.yaml
@@ -30,6 +30,18 @@ definitions:
     - name
     - problem_identities
     type: object
+  service.addExamProblemAccept:
+    properties:
+      exam_identity:
+        type: string
+      problem_identities:
+        items:
+          type: string
+        type: array
+    required:
+    - exam_identity
+    - problem_identities
+    type: object
   service.addKnowledgeAccept:
     properties:
       name:
@@ -77,6 +89,18 @@ definitions:
         type: string
     required:
     - name
+    type: object
+  service.deleteExamProblemAccept:
+    properties:
+      exam_identity:
+        type: string
+      problem_identities:
+        items:
+          type: string
+        type: array
+    required:
+    - exam_identity
+    - problem_identities
     type: object
   service.deleteKnowledgeAccept:
     properties:
@@ -801,6 +825,7 @@ paths:
       - description: classIdentity
         in: query
         name: classIdentity
+        required: true
         type: string
       - description: page
         in: query
@@ -867,6 +892,49 @@ paths:
           schema:
             type: string
       summary: 更新考试信息
+      tags:
+      - 老师方法
+  /teacher/ExamProblem:
+    delete:
+      parameters:
+      - description: json
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/service.deleteExamProblemAccept'
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: code":"200","msg":"","data",""}
+          schema:
+            type: string
+      summary: 删除考试题目
+      tags:
+      - 老师方法
+    post:
+      parameters:
+      - description: json
+        in: body
+        name: json
+        required: true
+        schema:
+          $ref: '#/definitions/service.addExamProblemAccept'
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: code":"200","msg":"","data",""}
+          schema:
+            type: string
+      summary: 添加考试题目
       tags:
       - 老师方法
   /teacher/Knowledge:
